[gd_scene load_steps=46 format=3 uid="uid://cbhpeqiix6dje"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_y4xbc"]
[ext_resource type="Texture2D" uid="uid://bxh7p1ylx5a1l" path="res://assets/sprites/enemy_knight_attack.png.png" id="2_r3tny"]
[ext_resource type="Texture2D" uid="uid://bm5xlw24uewet" path="res://assets/sprites/enemy_knight.png" id="2_ts0dv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7xhkl"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21k07"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_catbj"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxxob"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c0mq"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv0uo"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvvv"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b33gg"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3kep"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7se1j"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vphoy"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns4e5"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbkq1"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kynwp"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1tu5"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjwmc"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_su0ws"]
atlas = ExtResource("2_ts0dv")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyjl5"]
atlas = ExtResource("2_ts0dv")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s32bm"]
atlas = ExtResource("2_ts0dv")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0rxk"]
atlas = ExtResource("2_ts0dv")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpae0"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xoxu"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eovhb"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_blixe"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4d7e"]
atlas = ExtResource("2_ts0dv")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpssp"]
atlas = ExtResource("2_ts0dv")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5r0p"]
atlas = ExtResource("2_ts0dv")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u71ed"]
atlas = ExtResource("2_ts0dv")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjrwe"]
atlas = ExtResource("2_r3tny")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tucpm"]
atlas = ExtResource("2_r3tny")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w601v"]
atlas = ExtResource("2_r3tny")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfwyr"]
atlas = ExtResource("2_r3tny")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wst42"]
atlas = ExtResource("2_r3tny")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0hch"]
atlas = ExtResource("2_ts0dv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dhux"]
atlas = ExtResource("2_ts0dv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1fcf"]
atlas = ExtResource("2_ts0dv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qknre"]
atlas = ExtResource("2_ts0dv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_52fup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xhkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21k07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_catbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxxob")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c0mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv0uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b33gg")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3kep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7se1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vphoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns4e5")
}],
"loop": false,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbkq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kynwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1tu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjwmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su0ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyjl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s32bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0rxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpae0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xoxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eovhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blixe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4d7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpssp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5r0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u71ed")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjrwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tucpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w601v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfwyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wst42")
}],
"loop": false,
"name": &"single_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0hch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dhux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1fcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qknre")
}],
"loop": false,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f1v4f"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w0lb6"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_je2yq"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pd10n"]
size = Vector2(45, 10)

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_y4xbc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_52fup")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_f1v4f")

[node name="DircetionTimer" type="Timer" parent="."]
autostart = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_w0lb6")

[node name="EnemyDealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDealDamageArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_je2yq")

[node name="Detection_area" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
position = Vector2(16, -1)
shape = SubResource("RectangleShape2D_pd10n")

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.0862745, 0.905882, 0, 1)
offset_left = -7.0
offset_top = -20.0
offset_right = 133.0
offset_bottom = 7.0
scale = Vector2(0.1, 0.1)
max_value = 50.0
show_percentage = false

[connection signal="timeout" from="DircetionTimer" to="." method="_on_dircetion_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="EnemyDealDamageArea" to="." method="_on_enemy_deal_damage_area_area_entered"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Detection_area" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Detection_area" to="." method="_on_area_2d_body_shape_exited"]
